@@ -1,5 +1,6 @@
 Changes for 1.1.5:
 
+ - www.zabbix.com replaced by localhost in agent (Alexei)
  - fixed calculation of sum(#N) (Alexei)
  - improvements of PostgreSQL code (Alexei)
  - fixed temporary files deletion for WinXX agents (Eugene)
